# pyiron_workflow_structure_optimisation

./: .buildinfo  README.html  environment.yml  example.html  genindex.html  meta.json  objects.inv  pyproject.toml  search.html  searchindex.js  structure_optimisation.html
.github/ci_support/: build_notebooks.sh  environment.yml  import_dataset.sh
.github/workflows/: notebooks.yml
_sources/: README.md
