[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "material-digital-workflow"
version = "0.1.0"
description = "Material Digital workflow dependencies"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Material Digital Team"}
]
keywords = ["materials", "simulation", "workflow", "pyiron"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core scientific computing
    "numpy==1.26.4",
    "pandas==2.3.1",
    
    # Materials science libraries
    "ase==3.26.0",
    "pymatgen==2025.6.14",
    
    # Pyiron ecosystem
    "pyiron-workflow==0.15.2",
    "pyiron-lammps==0.4.6",
    "pyiron-workflow-atomistics==0.0.2",
    "pyiron-workflow-lammps==0.0.2",
    "pyiron-snippets==0.2.0",
    
    # Molecular dynamics simulation
    "lammps",
    
    # Job scheduling and queue management
    "pysqa==0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/MaterialDigital/workflow"
Repository = "https://github.com/MaterialDigital/workflow"
Documentation = "https://materialdigital.github.io/workflow"

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow*"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=workflow --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
